# auth_microservice

./: .dockerignore  .env.prod.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
scripts/: dev.sh
src/: cache.py  config.py  database.py  main.py  models.py  schemas.py
src/auth/: dependencies.py  device.py  email.py  hashing.py  jwt.py
src/routes/: auth.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_auth_helpers.py  test_devices.py  test_jwt.py  test_users.py  test_utils.py  testingREADME.md
