[project]
name = "auth-microservice"
version = "0.1.0"
description = "auth microservice testing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "passlib>=1.7.4",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
]
