[project]
name = "auth-microservice"
version = "0.1.0"
description = "auth microservice testing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.0",
    "passlib>=1.7.4",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]
